Se removio parrafos

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>TITLE</h1>
-    <p>hola</p>
-    <p>cambio 1</p>
+    <h1>Custom commands</h1>
 </body>
 </html>
