Se agrego informacion en el README.md

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Custom commands</h1>
+    <h1>Revisar el <b>README.md</b> del <i>repositorio</i><</h1>
 </body>
 </html>
